2023-02-20  Martin Maechler  <maechler@lynne>

	* DESCRIPTION (Date): updated, Version: 1.1-10 - ready for release

	* R/lokerns.R (etc): change default of `inputb` argument to use
	  `all(bandwith > 0)' instead of `bandwidth > 0`.

2021-04-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/glkerns.R (asIntLogic): wrapper to ensure passing *integer* in .Fortran()

2021-04-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date): updated, Version: 1.1-9 - ready for release

	* src/lokerns.f (lokern_s): Need to compute 'b := mean(bandw[])' in
	some cases; found from valgrind uninitialized 'b' results.

	* src/monitor.c (monitk0, monit2ib): enhanced and new - for
	'trace=TRUE'; helped diagnosing the above bug.

2020-07-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-9, (after CRAN NM-release of 1.1-8.1)
	* src/init.c: new (autogenerated) for "proper" registration
	* src/*.f   : LTO-compatible calls to BLAS/Lapack, using FCONE
	* man/glkerns.Rd: UZH biostat 'kernel.html' is gone.

2016-10-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-8, released to CRAN

2016-09-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lokerns.R (predict.KernS): now 'newdata = *' works; and other
 	{extraneous} args give a warning.

2014-11-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* Thanks to Andri Signorell's insistence:
	* R/lokerns.R (lokerns.default, *.formula): make S3 generic;
	provide formula method
	* R/glkerns.R (glkerns.default, *.formula): ditto


2014-11-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-6
	* R/lokerns.R (lines.KernS): simple method added

2013-11-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lokerns.R (predict.KernS): fix for "interesting" case;
	* man/KernS-methods.Rd: also update documentation and add
	"regression" test.

	* DESCRIPTION (Version): 1.1-5

2013-04-18  Martin Maechler  <maechler@stat.math.ethz.ch>
