@@ -1,6 +1,6 @@
 Package: lokern
 Version: 1.1-11
-Date: 2024-04-03
+Date: 2024-04-18
 Title: Kernel Regression Smoothing with Local or Global Plug-in Bandwidth
 Author: Eva Herrmann <eherrmann@mathematik.tu-darmstadt.de> (F77 & S original);
 	Packaged for R and enhanced by Martin Maechler
